--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" type="stylesheet" href="assets/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/style.css" />
+  <link rel="stylesheet" type="stylesheet" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+  <title>Joshua Grube's Portfolio</title>
 </head>
 
 <body>
@@ -31,7 +32,9 @@
   <div class="content">
     <div class="content"></div>
     <div class="card">
-      <div class="card-image"></div>
+      <div class="card-image">
+        <img id="card1" src="assets/images/ntFmJUZ8tw3ULD3tkBaAtf.jpg" alt="Your work here" style="width:100px;height:100px;">
+      </div>
       <div class="card-text">
         <span class="date">4 days ago</span>
         <h2>Post One</h2>
@@ -61,14 +64,18 @@
     </div>
   </div>
   <section class="mid">
-    <h1>About me</h1>
+    <h1 id="recent">About me</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur dolorum laboriosam libero, repudiandae aliquam sequi. Expedita, fuga maiores. Aut modi aperiam molestiae fuga sint accusantium nobis cupiditate et excepturi dolores! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eveniet expedita sed, architecto minus quasi laboriosam, veritatis error enim deleniti rerum explicabo natus ratione odio. Quos suscipit qui repudiandae soluta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt magnam sequi quia dignissimos. Itaque assumenda commodi, nemo, consequatur necessitatibus in temporibus suscipit odit eaque aliquid enim cum qui aliquam laboriosam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti, provident voluptates? Excepturi unde expedita id necessitatibus beatae cumque tenetur nostrum deserunt itaque fugit, dicta alias vel quos, blanditiis accusantium? Consectetur. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem enim dolore delectus id qui, error eum molestias sed accusantium? Corrupti aliquam tenetur aliquid quasi in, sunt vitae consequatur maiores officiis? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi earum sed quos aliquid tempora repudiandae aut quibusdam qui dolor ab magni error sequi, pariatur soluta magnam impedit asperiores laudantium Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis veniam laboriosam modi aliquam dicta itaque nesciunt corrupti optio, quo, officiis repellendus, qui exercitationem doloremque reprehenderit quam voluptatem in porro delectus!</ea></p>
   </section>
   <section class="bigcard">
     <section class="bc-inner">
       <section class="bc-front">
-        <img id="skills" src="assets/ntFmJUZ8tw3ULD3tkBaAtf.jpg" alt="Your work here" style="width:300px;height:300px;">
+        <img id="skills" src="assets/images/ntFmJUZ8tw3ULD3tkBaAtf.jpg" alt="Your work here" style="width:300px;height:300px;">
       </section>
+      <section class="bc-back">
+        <h1>Back of Card</h1>
+          <p>Your use of this site is subject to the terms and conditions governing this and all transactions.</p>
+        <button>Submit</button></div></section>
       <section class="bc-text">
         <span class="bc-date">2 months ago</span>
         <h2>Post 4</h2>
@@ -80,6 +87,8 @@
 </body>
 </div>
 <div class="footer"></div>
+<!-- <script src="assets/index.js"></script> -->
+<script src="assets/index.js"></script>
 </body>
 
 </html>
