--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
   <title>Joshua Grube's Portfolio</title>
@@ -12,14 +13,12 @@
   <div class="header">
     <header id="header-background">
       <nav>
-        <h1>Grube</h1>
         </a>
-        <!-- <input class="menu-btn" type="none" id="menu-btn"> -->
         <label class="menu-icon" for="menu-btn">
           <span class="nav-icon"></span>
         </label>
         <ul class="menu">
-          <li><a href="#main">Home</a></li>
+          <li><a href="#header-background">Home</a></li>
           <li><a href="#skills">Previous Works</a></li>
           <li><a href="#recent">About me</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -30,16 +29,22 @@
   </div>
 
   <div class="content">
-    <div class="content"></div>
+    <a href="www.google.com"></a>
     <div class="card">
       <div class="card-image">
-        <img id="card1" src="assets/images/ntFmJUZ8tw3ULD3tkBaAtf.jpg" alt="Your work here" style="width:100px;height:100px;">
+        <img id="card1">
       </div>
       <div class="card-text">
-        <span class="date">4 days ago</span>
-        <h2>Post One</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt
-          eligendi dolor</p>
+        <span class="date">1 day ago</span>
+        <h2>Place your work here</h2>
+        <p>Placeholder for where i will describe my most recent work. </p>
+        <ul>
+          <p>Languages used</p>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Javascript</li>
+          </ul>
+            <p>These will be links to other parts of the website</p>
       </div>
     </div>
   </div>
@@ -47,45 +52,101 @@
     <div class="card-image card2"></div>
     <div class="card-text card2">
       <span class="date">1 week ago</span>
-      <h2>Post Two</h2>
-      <p>Adipisicing elit. Ducimus, repudiandae corrupti amet temporibus omnis provident illum maxime quod. Lorem
-        ipsum
-        dolor</p>
+      <h2>Work Two</h2>
+      <p>Placeholder for where i will describe my most recent work. </p>
+        <ul>
+          <p>Languages used</p>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Javascript</li>
+          </ul>
+            <p>These will be links to other parts of the website</p>
     </div>
   </div>
   <div class="card">
     <div class="card-image card3"></div>
     <div class="card-text card3">
-      <span class="date">3 week ago</span>
-      <h2>Post Three</h2>
-      <p>Repudiandae corrupti amet temporibus omnis provident illum maxime. Ducimus, lorem ipsum dolor adipisicing
-        elit
-      </p>
+      <span class="date">3 weeks ago</span>
+      <h2>Work Three</h2>
+      <p>Placeholder for where i will describe my most recent work. </p>
+      <ul>
+        <p>Languages used</p>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Javascript</li>
+        </ul>
+          <p>These will be links to other parts of the website</p>
     </div>
   </div>
   <section class="mid">
-    <h1 id="recent">About me</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur dolorum laboriosam libero, repudiandae aliquam sequi. Expedita, fuga maiores. Aut modi aperiam molestiae fuga sint accusantium nobis cupiditate et excepturi dolores! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eveniet expedita sed, architecto minus quasi laboriosam, veritatis error enim deleniti rerum explicabo natus ratione odio. Quos suscipit qui repudiandae soluta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt magnam sequi quia dignissimos. Itaque assumenda commodi, nemo, consequatur necessitatibus in temporibus suscipit odit eaque aliquid enim cum qui aliquam laboriosam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti, provident voluptates? Excepturi unde expedita id necessitatibus beatae cumque tenetur nostrum deserunt itaque fugit, dicta alias vel quos, blanditiis accusantium? Consectetur. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem enim dolore delectus id qui, error eum molestias sed accusantium? Corrupti aliquam tenetur aliquid quasi in, sunt vitae consequatur maiores officiis? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi earum sed quos aliquid tempora repudiandae aut quibusdam qui dolor ab magni error sequi, pariatur soluta magnam impedit asperiores laudantium Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis veniam laboriosam modi aliquam dicta itaque nesciunt corrupti optio, quo, officiis repellendus, qui exercitationem doloremque reprehenderit quam voluptatem in porro delectus!</ea></p>
+    <div id="recent"></div>
+    <h3>About me</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur dolorum laboriosam libero, repudiandae aliquam
+      sequi. Expedita, fuga maiores. Aut modi aperiam molestiae fuga sint accusantium nobis cupiditate et excepturi
+      dolores! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eveniet expedita sed, architecto minus
+      quasi laboriosam, veritatis error enim deleniti rerum explicabo natus ratione odio. Quos suscipit qui repudiandae
+      soluta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt magnam sequi quia dignissimos. Itaque
+      assumenda commodi, nemo, consequatur necessitatibus in temporibus suscipit odit eaque aliquid enim cum qui aliquam
+      laboriosam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti, provident voluptates? Excepturi
+      unde expedita id necessitatibus beatae cumque tenetur nostrum deserunt itaque fugit, dicta alias vel quos,
+      blanditiis accusantium? Consectetur. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem enim
+      dolore delectus id qui, error eum molestias sed accusantium? Corrupti aliquam tenetur aliquid quasi in, sunt vitae
+      consequatur maiores officiis? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi earum sed quos
+      aliquid tempora repudiandae aut quibusdam qui dolor ab magni error sequi, pariatur soluta magnam impedit
+      asperiores laudantium Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis veniam laboriosam modi
+      aliquam dicta itaque nesciunt corrupti optio, quo, officiis repellendus, qui exercitationem doloremque
+      reprehenderit quam voluptatem in porro delectus!</ea>
+      </p>
   </section>
   <section class="bigcard">
     <section class="bc-inner">
       <section class="bc-front">
-        <img id="skills" src="assets/images/ntFmJUZ8tw3ULD3tkBaAtf.jpg" alt="Your work here" style="width:300px;height:300px;">
-      </section>
+        <img id="skills" src="assets/images/sunset mountains clouds 1920x1080 wallpaper_www.wallpaperhi.com_60.jpg" alt="Your work here"
+          style="width:300px;height:300px;">
+        </section>
       <section class="bc-back">
-        <h1>Back of Card</h1>
-          <p>Your use of this site is subject to the terms and conditions governing this and all transactions.</p>
-        <button>Submit</button></div></section>
-      <section class="bc-text">
+        <img id="skills" src="assets/images/ntFmJUZ8tw3ULD3tkBaAtf.jpg" alt="Your work here"
+          style="width:300px;height:300px;">
+        <h1>Deep dive into Application 1</h1>
+        <p class="back">I intend to use this space to get into the methods and skills i put into use during my time working on Application 1. </p>
+        </div>
+      </section>
+
+      <section class="bc-front-text">
         <span class="bc-date">2 months ago</span>
-        <h2>Post 4</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit minima blanditiis incidunt dolorum,
-          distinctio aliquid a facere, dignissimos esse, veritatis illo sunt quae.</p>
+      </section>
+      <section class="bc-back-text">
+        <h2>Application #1 Showcase</h2>
+        <p>I'm using a placeholder image but I intend to have a picture of either the finished product or of the code as a background image with low opacity. On the front of the card, in this text section, i will explain the project goals and vision.
+        </p>
       </section>
     </section>
   </section>
 </body>
 </div>
+<form id="contact">
+  <p>
+    <label for="name">Name:</label>
+      <input id="name" type="text" placeholder="First & Last">
+  </p>
+  <p>
+    <label  for="email">E-mail:</label>
+      <input id="email" type="text" placeholder="youremail@email.com">
+  </p>
+  <p>
+    <label for="inquiry">What would you like to talk about?</label>
+    <select id="inquiry">
+      <option>Job Opportunity</option>
+      <option selected>Collaboration</option>
+      <option>Other</option>
+    </select>
+  </p>
+  <p>
+    <input class="checkbox" id="agreement" type="checkbox" />
+    <label for="agreement">Yes, you may email me other Offers and Opportunities.</label>
+  </p>
+  <button>Submit</button>
+</form>
 <div class="footer"></div>
 <!-- <script src="assets/index.js"></script> -->
 <script src="assets/index.js"></script>
