--- a/index.html
+++ b/index.html
@@ -99,28 +99,29 @@
       </p>
   </section>
   <section class="bigcard">
-    <section class="bc-inner">
-      <section class="bc-front">
-        <img id="skills" src="assets/images/sunset mountains clouds 1920x1080 wallpaper_www.wallpaperhi.com_60.jpg" alt="Your work here"
-          style="width:300px;height:300px;">
+    <a href="google.com" style="text-decoration: none; color:white">
+      <section class="bc-inner">
+        <section class="bc-front">
+          <img id="skills" src="assets/images/sunset mountains clouds 1920x1080 wallpaper_www.wallpaperhi.com_60.jpg" alt="Your work here"
+            style="width:300px;height:300px;">
+          </section>
+        <section class="bc-back">
+          <img id="skills" src="assets/images/ntFmJUZ8tw3ULD3tkBaAtf.jpg" alt="Your work here"
+            style="width:300px;height:300px;">
+          <h1>Deep dive into Application 1</h1>
+          <p class="back">I intend to use this space to get into the methods and skills i put into use during my time working on Application 1. </p>
+          </div>
         </section>
-      <section class="bc-back">
-        <img id="skills" src="assets/images/ntFmJUZ8tw3ULD3tkBaAtf.jpg" alt="Your work here"
-          style="width:300px;height:300px;">
-        <h1>Deep dive into Application 1</h1>
-        <p class="back">I intend to use this space to get into the methods and skills i put into use during my time working on Application 1. </p>
-        </div>
-      </section>
 
-      <section class="bc-front-text">
-        <span class="bc-date">2 months ago</span>
+        <section class="bc-front-text">
+          <span class="bc-date">2 months ago</span>
+        </section>
+        <section class="bc-back-text">
+          <h2>Application #1 Showcase</h2>
+          <p>I'm using a placeholder image but I intend to have a picture of either the finished product or of the code as a background image with low opacity. On the front of the card, in this text section, i will explain the project goals and vision.
+          </p>
+        </section>
       </section>
-      <section class="bc-back-text">
-        <h2>Application #1 Showcase</h2>
-        <p>I'm using a placeholder image but I intend to have a picture of either the finished product or of the code as a background image with low opacity. On the front of the card, in this text section, i will explain the project goals and vision.
-        </p>
-      </section>
-    </section>
   </section>
 </body>
 </div>
