--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <a href="google.com" style="text-decoration: none; color:white">
       <section class="bc-inner">
         <section class="bc-front">
-          <img id="skills" src="assets/images/sunset mountains clouds 1920x1080 wallpaper_www.wallpaperhi.com_60.jpg" alt="Your work here"
+          <img id="skills" src="assets/images/Watchhub.jpg" alt="Your work here"
             style="width:300px;height:300px;">
           </section>
         <section class="bc-back">
@@ -114,11 +114,11 @@
         </section>
 
         <section class="bc-front-text">
-          <span class="bc-date">2 months ago</span>
+          <span class="bc-date">May 24th, 2021.</span>
         </section>
         <section class="bc-back-text">
-          <h2>Application #1 Showcase</h2>
-          <p>I'm using a placeholder image but I intend to have a picture of either the finished product or of the code as a background image with low opacity. On the front of the card, in this text section, i will explain the project goals and vision.
+          <h2>Watch Hub</h2>
+          <p>GIVEN I would like to obtain information about a movie or show WHEN I search for a movie or show title THEN I am provided with the specific title that was entered in the form input\par WHEN I view aforementioned movie or show title THEN I am presented with the movie's or show's poster, the actors starring in the movie or show, a full plot, critic score, ratings, runtime, release date, related searches, and a link to the git hub repo. WHEN I click on one of the posters in the related search section. THEN I am taken to the IMDB webpage for a look at the trailer and to obtain further information. WHEN I go to search for more movie or show titles THEN I am presented with a drop list of previous searches for convenience purposes.
           </p>
         </section>
       </section>
