--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <a href="google.com" style="text-decoration: none; color:white">
       <section class="bc-inner">
         <section class="bc-front">
-          <img id="skills" src="assets/images/Watchhub.jpg" alt="Your work here"
+          <img id="skills" src="assets/images/Untitled.png" alt="Your work here"
             style="width:300px;height:300px;">
           </section>
         <section class="bc-back">
@@ -114,10 +114,10 @@
         </section>
 
         <section class="bc-front-text">
-          <span class="bc-date">May 24th, 2021.</span>
+          <span class="bc-date">June 30th, 2021.</span>
         </section>
         <section class="bc-back-text">
-          <h2>Watch Hub</h2>
+          <h2>Watch Hub V2</h2>
           <p>GIVEN I would like to obtain information about a movie or show WHEN I search for a movie or show title THEN I am provided with the specific title that was entered in the form input\par WHEN I view aforementioned movie or show title THEN I am presented with the movie's or show's poster, the actors starring in the movie or show, a full plot, critic score, ratings, runtime, release date, related searches, and a link to the git hub repo. WHEN I click on one of the posters in the related search section. THEN I am taken to the IMDB webpage for a look at the trailer and to obtain further information. WHEN I go to search for more movie or show titles THEN I am presented with a drop list of previous searches for convenience purposes.
           </p>
         </section>
