--- a/index.html
+++ b/index.html
@@ -35,48 +35,45 @@
         <img id="card1">
       </div>
       <div class="card-text">
-        <span class="date">1 day ago</span>
-        <h2>Place your work here</h2>
-        <p>Placeholder for where i will describe my most recent work. </p>
+        <span class="date">May 12th, 2021</span>
+        <h2>History Quiz</h2>
+        <p>This quiz was created for Rutger's Coding Bootcamp as a homework assignment.<br> When you click the start button, the timer starts and you are presented with questions. Time is subtracted from the clock with each incorrect question. </p>
         <ul>
           <p>Languages used</p>
             <li>HTML</li>
             <li>CSS</li>
             <li>Javascript</li>
           </ul>
-            <p>These will be links to other parts of the website</p>
+            <p><a href='https://github.com/steamjgrube/history-quiz-game'>Coding Quiz</a></p>
       </div>
     </div>
   </div>
   <div class="card">
     <div class="card-image card2"></div>
     <div class="card-text card2">
-      <span class="date">1 week ago</span>
-      <h2>Work Two</h2>
-      <p>Placeholder for where i will describe my most recent work. </p>
+      <span class="date">July 3rd, 2021</span>
+      <h2>Weather Dashboard</h2>
+      <p>This Dashboard was created for Rutger's Coding Bootcamp. Check the weather of any U.S. City and get the 5 day forecast for that city as well!</p>
         <ul>
           <p>Languages used</p>
             <li>HTML</li>
-            <li>CSS</li>
             <li>Javascript</li>
           </ul>
-            <p>These will be links to other parts of the website</p>
-    </div>
+          <p><a href='https://github.com/steamjgrube/weather-app'>Weather Dashboard</a></p>
+        </div>
   </div>
   <div class="card">
     <div class="card-image card3"></div>
     <div class="card-text card3">
       <span class="date">3 weeks ago</span>
-      <h2>Work Three</h2>
-      <p>Placeholder for where i will describe my most recent work. </p>
+      <h2>Employee Tracker</h2>
+      <p>This tracker was created for Rutger's Coding Bootcamp. Using the CLI, you can add, view, and update employee profiles. </p>
       <ul>
         <p>Languages used</p>
-          <li>HTML</li>
-          <li>CSS</li>
           <li>Javascript</li>
         </ul>
-          <p>These will be links to other parts of the website</p>
-    </div>
+        <p><a href='https://github.com/steamjgrube/EmployeeTracker'>Employee Tracker</a></p>
+      </div>
   </div>
   <section class="mid">
     <div id="recent"></div>
